--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         <div class="container">
             <div class="logo-container">
                 <!-- Main Logo - Replace with your actual logo -->
-                <img src="krg_logo.png" 
+                <img src="/krg_logo.png" 
                      alt="MediLab Diagnostics" 
                      class="logo">
             </div>
@@ -315,11 +315,11 @@
     
     <footer>
         <div class="container">
-            <p>&copy; 2023 MediLab Diagnostics. All Rights Reserved.</p>
-            <div style="margin-top: 15px;">
-                <img src="https://img.icons8.com/color/48/000000/certificate.png" alt="CAP" style="height: 40px; margin: 0 10px;">
-                <img src="https://img.icons8.com/color/48/000000/medical-certificate.png" alt="CLIA" style="height: 40px; margin: 0 10px;">
-                <img src="https://img.icons8.com/color/48/000000/iso.png" alt="ISO" style="height: 40px; margin: 0 10px;">
+            <p>&copy; 2023 Advanced Medical Laboratories. All Rights Reserved.</p>
+            <p>Accredited by CAP and CLIA</p>
+            <div style="margin-top: 20px;">
+                <i class="fas fa-certificate" style="font-size: 2rem; color: gold; margin: 0 10px;"></i>
+                <i class="fas fa-award" style="font-size: 2rem; color: silver; margin: 0 10px;"></i>
             </div>
         </div>
     </footer>
