--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         <div class="container">
             <div class="logo-container">
                 <!-- Main Logo - Replace with your actual logo -->
-                <img src="/krg_logo.png" 
+                <img src="krg_logo.png" 
                      alt="MediLab Diagnostics" 
                      class="logo">
             </div>
